stylesheets/bsafes.css
/* ... */
.pageRow {
  margin-left:0px;
  margin-right:0px;
}
.editorRow {
  min-height:100px;
	overflow-x:auto;
}
/* End of page general */
/*--****** Attachment */
.attachmentPanel {
  margin-bottom:0;
}

.attachmentPanelBody {
  padding-top:0;
  padding-bottom:0;
  padding-right:0;
}

.attachmentFileNameRow {
  margin-bottom:0;
}

.attachmentFileNameGrid {
  white-space: nowrap;
  overflow:hidden;
  text-overflow: ellipsis;
}

.attachmentFileNameGrid > h6 {
  margin-top:10;
  margin-bottom:0;
}

.attachmentFileSizeRow {
  margin-bottom:0;
}

.attachmentFileSize {
  margin-top:0;
  margin-bottom:0;
}

.attachmentFileProgress {
  margin-top:0;
  margin-bottom:0;
}

.attachmentProgress {
  margin-top:0;
  margin-bottom:0;
}

/* End of attachment */
/*--***** Comments */
.comments {
	margin-left:7px;
	margin-right:7px
}
/* End of comments */
/* End of page *******/

